fix: exact width and height for covers

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -333,7 +333,9 @@ form {
 .media_cover {
     width: 100%;
     max-width: 170px;
-    height: 250px;
+    min-width: 170px;
+    max-height: 250px;
+    min-height: 250px;	
 }
 
 .media_cover:hover {
